--- a/wof/build.gradle
+++ b/wof/build.gradle
@@ -1,4 +1,4 @@
-plugins {
+/*plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.2-SNAPSHOT'
 	id 'io.spring.dependency-management' version '1.1.5'
@@ -26,4 +26,21 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}*/
+apply plugin: 'java'
+apply plugin: 'application'
+
+mainClassName = 'SheetsQuickstart'
+sourceCompatibility = 17
+targetCompatibility = 17
+version = '1.0'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'com.google.api-client:google-api-client:2.0.0'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
+    implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
 }
