--- a/wof/build.gradle
+++ b/wof/build.gradle
@@ -5,6 +5,10 @@ plugins {
 	id 'application'
 }
 
+/*application {
+	mainClass = 'WOFServiceApplication'
+}*/
+
 group = 'vic.projects'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 17
@@ -30,23 +34,7 @@ dependencies {
     	implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
 }
 
-tasks.named('test') {
+test {
 	useJUnitPlatform()
 }
-/*apply plugin: 'java'
-apply plugin: 'application'
 
-mainClassName = 'SheetsQuickstart'
-sourceCompatibility = 17
-targetCompatibility = 17
-version = '1.0'
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    implementation 'com.google.api-client:google-api-client:2.0.0'
-    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
-    implementation 'com.google.apis:google-api-services-sheets:v4-rev20220927-2.0.0'
-}*/
